added config page for adding APIkey and fixed time ago in news feed

--- a/src/app/news/catogory/catogory.component.html
+++ b/src/app/news/catogory/catogory.component.html
@@ -10,7 +10,7 @@
               <span style="color: brown">Author by</span> {{key.author}}</p>
           </div>
           <div class="card-footer">
-            <p style="margin: 0;">{{key.publishedAt}}</p>
+            <p style="margin: 0;"><span>{{key.publishedAt | timeAgo}}</span></p>
           </div>
         </div>
       </div>
