--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-default">
     <div class="container-fluid">
         <div class="navbar-header">
-            <a class="navbar-brand">{{title}}</a>
+            <a href="#" class="navbar-brand">{{title}}</a>
         </div>
     </div>
 </nav>
