--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,17 @@
 <nav class="navbar navbar-default">
     <div class="container-fluid">
         <div class="navbar-header">
-            <a href="#" class="navbar-brand">{{title}}</a>
+            <a class="navbar-brand">{{title}}</a>
+        </div>
+        <div>
+            <ul class="nav navbar-nav">
+                <li class="nav-item active">
+                  <a class="nav-link" href="/#/">Home</a> 
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="/#/allData">All Data</a>
+                </li>
+              </ul>
         </div>
     </div>
 </nav>
