--- a/src/app/sample/sample.component.html
+++ b/src/app/sample/sample.component.html
@@ -1,5 +1,8 @@
 <div class="row">
   <div class="col-md-4 col-md-offset-4">
+      <input class="form-control cust-width" id="myInput" [ngModel]="search" (ngModelChange)="saverange($event)" type="text" placeholder="Search..">
+  </div>
+  <div class="col-md-4 col-md-offset-4">
     <div *ngFor="let key of articleList | paginate: { id: 'server', itemsPerPage: pagesize, currentPage: p, totalItems: count }">
       <div class="row">
         <div class="card h-100">
