--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,13 +5,13 @@
         </div>
         <div>
             <ul class="nav navbar-nav">
-                <li class="nav-item active">
-                  <a class="nav-link" href="/#/">Home</a> 
+                <li class="nav-item">
+                    <a routerLinkActive="active" [routerLink]=" ['/']">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/#/allData">All Data</a>
+                    <a routerLinkActive="active" [routerLink]=" ['/allData'] ">All Data</a>
                 </li>
-              </ul>
+            </ul>
         </div>
     </div>
 </nav>
