--- a/src/app/catogory/catogory.component.html
+++ b/src/app/catogory/catogory.component.html
@@ -1,21 +1,25 @@
 <div class="row">
   <div class="col-md-4 col-md-offset-4">
-    <div *ngFor="let key of articleList | paginate: { id: 'server', itemsPerPage: pagesize, currentPage: p, totalItems: count }">
+    <div *ngFor="let key of articleList | paginate: { id: 'server', itemsPerPage: pagesize, currentPage: pagination, totalItems: totalCountResult }">
       <div class="row">
         <div class="card h-100">
           <h4 class="card-header">{{key.title}}</h4>
           <div class="card-body">
             <p class="card-text">{{key.description}}</p>
-            <p>
-              <span style="color: brown">Author by</span> {{key.author}}</p>
+            <p><span *ngIf="key.author" style="color: brown">Author by</span> {{key.author}}</p>
           </div>
           <div class="card-footer">
-            <p style="margin: 0;"><span>{{key.publishedAt | timeAgo}}</span></p>
+            <p style="margin: 0;">
+              <span>{{key.publishedAt | timeAgo}}</span>
+            </p>
+            <p>
+              <span style="color: brown">Source: </span>{{key.source.name}}
+            </p>
           </div>
         </div>
       </div>
     </div>
-    
-  <pagination-controls (pageChange)="onApicall($event)" id="server"></pagination-controls>
+
+    <pagination-controls (pageChange)="onApicall($event)" id="server" autoHide="true"></pagination-controls>
   </div>
 </div>
