--- a/src/app/news/news.component.html
+++ b/src/app/news/news.component.html
@@ -4,7 +4,7 @@
   </h4>
   <div class="row">
     <div class="col-md-2">
-      <div class="" *ngFor="let key of name1">
+      <div class="" *ngFor="let key of getCountryName">
         <p [class.selected]="key === selectedCountry" (click)="onSelect(key)">
           <a>{{key.name}}</a>
         </p>
