--- a/src/app/sample/sample.component.html
+++ b/src/app/sample/sample.component.html
@@ -1,9 +1,9 @@
 <div class="row">
   <div class="col-md-4 col-md-offset-4">
-      <input class="form-control cust-width" id="myInput" [ngModel]="search" (ngModelChange)="saverange($event)" type="text" placeholder="Search..">
+    <input class="form-control cust-width" id="myInput" [ngModel]="search" (ngModelChange)="saverange($event)" type="text" placeholder="Search..">
   </div>
   <div class="col-md-4 col-md-offset-4">
-    <div *ngFor="let key of articleList | paginate: { id: 'server', itemsPerPage: pagesize, currentPage: p, totalItems: count }">
+    <div *ngFor="let key of articleList | paginate: { id: 'server', itemsPerPage: pagesize, currentPage: pagination, totalItems: totalCountResult }">
       <div class="row">
         <div class="card h-100">
           <h4 class="card-header">{{key.title}}</h4>
@@ -13,12 +13,17 @@
               <span style="color: brown">Author by</span> {{key.author}}</p>
           </div>
           <div class="card-footer">
-            <p style="margin: 0;"><span>{{key.publishedAt | timeAgo}}</span></p>
+            <p style="margin: 0;">
+              <span>{{key.publishedAt | timeAgo}}</span>
+            </p>
+            <p>
+              <span style="color: brown">Source: </span>{{key.source.name}}
+            </p>
           </div>
         </div>
       </div>
     </div>
-    
-  <pagination-controls (pageChange)="onApicall($event)" id="server"></pagination-controls>
+
+    <pagination-controls (pageChange)="onApicall($event)" id="server" autoHide="true"></pagination-controls>
   </div>
 </div>
