Added Error alert module

--- a/src/app/sample/sample.component.html
+++ b/src/app/sample/sample.component.html
@@ -26,4 +26,5 @@
 
     <pagination-controls (pageChange)="onApicall($event)" id="server" autoHide="true"></pagination-controls>
   </div>
+  <app-alerts></app-alerts>
 </div>
