--- a/src/app/catogory/catogory.component.html
+++ b/src/app/catogory/catogory.component.html
@@ -22,4 +22,5 @@
 
     <pagination-controls (pageChange)="onApicall($event)" id="server" autoHide="true"></pagination-controls>
   </div>
+  <app-alerts></app-alerts>
 </div>
