--- a/src/app/sample/sample.component.html
+++ b/src/app/sample/sample.component.html
@@ -1,3 +1,5 @@
+<spinner [backgroundColor]="'#ff0000'" [spinner]="spinkit.skWave" [minDuration]="1000">
+</spinner>
 <div class="row">
   <div class="col-md-4 col-md-offset-4">
     <input class="form-control cust-width" id="myInput" [ngModel]="search" (ngModelChange)="saverange($event)" type="text" placeholder="Search..">
