--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,3 +17,24 @@
 </nav>
 
 <router-outlet></router-outlet>
+
+<div class="footer">
+    <div class="icon-bar">
+        <h3 style="margin: 0">Footer</h3>
+        <!-- <a href="#" class="facebook">
+            <i class="fa fa-facebook"></i>
+        </a>
+        <a href="#" class="twitter">
+            <i class="fa fa-twitter"></i>
+        </a>
+        <a href="#" class="google">
+            <i class="fa fa-google"></i>
+        </a>
+        <a href="#" class="linkedin">
+            <i class="fa fa-linkedin"></i>
+        </a>
+        <a href="#" class="youtube">
+            <i class="fa fa-youtube"></i>
+        </a> -->
+    </div>
+</div>
