--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,13 @@
 @import '~bootstrap/dist/css/bootstrap.min.css';
+@import '~@ngx-share/button/styles/share-buttons.css';
+@import '~@ngx-share/button/styles/themes/default/default-theme.css';
+
 
 body, input[text], button {
   color: #000;
+}
+html{
+  overflow-x: hidden;
 }
 * {
   font-family: Arial, Helvetica, sans-serif;
@@ -20,4 +26,8 @@ p.card-text {
 .card-footer{
   display: flex;
   justify-content: space-between;
+}
+pagination-controls{
+  display: table;
+  margin-bottom: 50px;
 }
