Added proper URL for sharing news

--- a/src/app/catogory/catogory.component.html
+++ b/src/app/catogory/catogory.component.html
@@ -17,7 +17,7 @@
             </p>
             <div>
               <share-buttons  [include]="['facebook','twitter','google','linkedin']" 
-                              [url]="'https://'+ key.source.name"
+                              [url]="key.url"
                               [autoSetMeta]="false">
               </share-buttons>
             </div>
