Added select option for the countries list

--- a/src/app/catogory/catogory.component.css
+++ b/src/app/catogory/catogory.component.css
@@ -10,6 +10,7 @@ h4.card-header {
 }
 .card-body {
     padding: 10px;
+    background: #dfdcdf;
 }
 .card-footer {
     border-top: 1px solid #ccc;
