--- a/src/app/news/news.component.html
+++ b/src/app/news/news.component.html
@@ -2,14 +2,27 @@
   <h4>
     {{news}}
   </h4>
+
+  <div class="countryDisplay row">
+    <div class="col-md-1">
+      <h4>Select Country</h4>
+    </div>
+    <div class="col-md-4 selectOption">
+      <select [(ngModel)]="selectedValue" (change)="onSelect(this)">
+        <option *ngFor="let key of getCountryName" [class.selected]="key === selectedCountry" [ngValue]="key">
+          {{key.name}}</option>
+      </select>
+    </div>
+  </div>
+
   <div class="row">
-    <div class="col-md-2">
+    <!-- <div class="col-md-2">
       <div class="" *ngFor="let key of getCountryName">
         <p [class.selected]="key === selectedCountry" (click)="onSelect(key)">
           <a>{{key.name}}</a>
         </p>
       </div>
-    </div>
+    </div> -->
 
 
     <div class="card panel-success col-md-10 borderLeft" *ngIf="selectedCountry">
