--- a/src/app/news/news.component.css
+++ b/src/app/news/news.component.css
@@ -3,10 +3,10 @@ section{
 }
 
 .card-body > a {
-    background: #538ae433;
+    background: #dadad9;
     padding: 8px 25px;
     border-radius: 50px;
-    color: #538AE4;
+    color: #0506f9;
     text-decoration: none;
 }
 .card-body{
@@ -19,4 +19,11 @@ section{
 }
 .col-md-2 >div > p > a {
     padding-left: 25px;
+}
+.selectOption{
+    padding: 5px;
+}
+.selectOption > select{
+    width: 175px;
+    padding: 5px;
 }
